--- a/source/_assets/stylesheets/base/_variables.scss
+++ b/source/_assets/stylesheets/base/_variables.scss
@@ -1,6 +1,7 @@
 // Typography
-$base-font-family: "Aktiv Grotesk", $helvetica;
-$heading-font-family: "FreightDisp Pro", $base-font-family;
+$base-font-family: "Freight", $helvetica;
+$heading-font-family: "Freight Disp", $base-font-family;
+$secondary-font-family: $helvetica;
 // Font Sizes
 $base-font-size: 1em;
 
