--- a/source/index.haml
+++ b/source/index.haml
@@ -3,10 +3,11 @@ layout: default
 ---
 .main-slide
   .header.container
-    %h1.logo LanzaHomes
+    %h1.logo
+      %a{:href => "/"} LanzaHomes
     %ul.menu
       %li
-        %a{:href => "/book"} Villa Maxim
+        %a{:href => "/villa-maxim.html"} Villa Maxim
       %li
         %a{:href => "/book"} Out &amp; About
       %li
@@ -26,6 +27,7 @@ layout: default
         Lanzarote holiday villa
         %br uniquely tailored to you
       %button.bordered.large Take a closer look
+
 
 .features
   .container
