--- a/source/_assets/stylesheets/base/_buttons.scss
+++ b/source/_assets/stylesheets/base/_buttons.scss
@@ -8,7 +8,7 @@ button, .btn {
   color: #fff;
   cursor: pointer;
   display: inline-block;
-  font-family: $base-font-family;
+  font-family: $secondary-font-family;
   font-size: 0.8125em;
   font-weight: 600;
   line-height: 1;
@@ -47,6 +47,6 @@ button, .btn {
     letter-spacing:1px;
   }
   &.large {
-    padding: 1.5em 1.8em;
+    padding: 2em 2.2em;
   }
 }
