--- a/source/_assets/stylesheets/base/_typography.scss
+++ b/source/_assets/stylesheets/base/_typography.scss
@@ -48,6 +48,7 @@ h6 {
 p {
   margin: 0 0 $small-spacing;
   font-size:18px;
+  font-family: $base-font-family;
 }
 
 a {
@@ -85,7 +86,7 @@ blockquote {
   font-size: 24px;
 }
 .large-title {
-  font-size: 88px;
+  font-size: 60px;
 }
 .title-bold {
   font-weight:500;
