--- a/source/index.haml
+++ b/source/index.haml
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-.main-slide
+.main-slide.main-slide--home
   .header.container
     %h1.logo
       %a{:href => "/"} LanzaHomes
@@ -26,7 +26,7 @@ layout: default
       %h1.title.large-title
         Lanzarote holiday villa
         %br uniquely tailored to you
-      %button.bordered.large Take a closer look
+      %a.btn.bordered.large{:href => "/villa-maxim.html"} Find out why
 
 
 .features
