--- a/source/villa-maxim.haml
+++ b/source/villa-maxim.haml
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-.main-slide
+.main-slide.main-slide--villa
   .header.container
     %h1.logo
       %a{:href => "/"} LanzaHomes
@@ -24,7 +24,9 @@ layout: default
   .slider
     .container
       %h1.title.large-title
-        An unforgettable experience
+        Imagine a your very own stunning villa
+        %br
+        where your possibilities are endless.
 
 %section.page-content
   .container
