--- a/source/_assets/stylesheets/base/_buttons.scss
+++ b/source/_assets/stylesheets/base/_buttons.scss
@@ -13,6 +13,7 @@ button, .btn {
   font-weight: 600;
   line-height: 1;
   outline:none;
+  letter-spacing:2px;
   padding: 1.2em 1.5em;
   text-transform:uppercase;
   text-decoration: none;
