--- a/source/_assets/stylesheets/base/_buttons.scss
+++ b/source/_assets/stylesheets/base/_buttons.scss
@@ -14,6 +14,7 @@ button, .btn {
   line-height: 1;
   outline:none;
   letter-spacing:2px;
+  border-radius:3px;
   padding: 1.2em 1.5em;
   text-transform:uppercase;
   text-decoration: none;
