--- a/source/villa-maxim.haml
+++ b/source/villa-maxim.haml
@@ -24,14 +24,14 @@ layout: default
   .slider
     .container
       %h1.title.large-title
-        Imagine a your very own stunning villa
+        The wonderful island of Lanzarote
         %br
         where your possibilities are endless.
 
 %section.page-content
   .container
     %article.col-5.center
-      .inner
+      .summary
         %h2.main-title Kitchen &amp; Lounge
         %p The top floor of the villa is dedicated to the lounge, kitchen/diner, powder room & large terrace.
         %p The sun filled lounge has a large picture window, double patio doors leading on to the large, partially covered terrace and a sliding window, making the most of the wonderful scenery. 
@@ -47,9 +47,33 @@ layout: default
           .gallery__image
             %img(src="{{ 'lagomar.jpg' | asset_path }}")
 
+    %article.split-2
+      .summary
+        %h3.t-subhead Essentials
+        %h2.main-title Kitchen &amp; Lounge
+        %p The top floor of the villa is dedicated to the lounge, kitchen/diner, powder room & large terrace.
+        %p The sun filled lounge has a large picture window, double patio doors leading on to the large, partially covered terrace and a sliding window, making the most of the wonderful scenery. 
+        %p.last The lounge has been decorated with comfortable sofas, Mexican furniture, all complemented by Moroccan vases & accessories.
+      .gallery
+        .gallery__collection.gallery__collection--three-up
+          .gallery__image
+            %img(src="{{ 'lagomar.jpg' | asset_path }}")
+
+    %article.split-2.split-2--reverse
+      .summary
+        %h3.t-subhead Essentials
+        %h2.main-title Kitchen &amp; Lounge
+        %p The top floor of the villa is dedicated to the lounge, kitchen/diner, powder room & large terrace.
+        %p The sun filled lounge has a large picture window, double patio doors leading on to the large, partially covered terrace and a sliding window, making the most of the wonderful scenery. 
+        %p.last The lounge has been decorated with comfortable sofas, Mexican furniture, all complemented by Moroccan vases & accessories.
+      .gallery
+        .gallery__collection.gallery__collection--three-up
+          .gallery__image
+            %img(src="{{ 'lagomar.jpg' | asset_path }}")
+
 
     %article.col-5.center
-      .inner
+      .summary
         %h2.main-title Kitchen &amp; Lounge
         %p The top floor of the villa is dedicated to the lounge, kitchen/diner, powder room & large terrace.
         %p The sun filled lounge has a large picture window, double patio doors leading on to the large, partially covered terrace and a sliding window, making the most of the wonderful scenery. 
