--- a/source/_assets/stylesheets/base/_variables.scss
+++ b/source/_assets/stylesheets/base/_variables.scss
@@ -1,7 +1,7 @@
 // Typography
 $base-font-family: "Freight", $helvetica;
 $heading-font-family: "Freight Disp", $base-font-family;
-$secondary-font-family: $helvetica;
+$secondary-font-family: "Graphik", $helvetica;
 // Font Sizes
 $base-font-size: 1em;
 
