--- a/source/index.haml
+++ b/source/index.haml
@@ -50,7 +50,7 @@ layout: default
     .split-50
       .masonry-wrapper.localarea
         .masonry-box
-          %h2.title-bold Visit the local area around you
+          %h2.title-bold.title Visit the local area around you
           %button.muted Explore
       .masonry-wrapper
         .masonry-wrapper-second
@@ -58,7 +58,7 @@ layout: default
             %h2 Your Arrival
           %article.masonry-box.masonry-box--calendar
             .inner
-              %h2 The Booking Calendar
+              %h2.title-bold The Booking Calendar
               %button.muted
                 Check availability
                 %i.icon-arrow-right
