--- a/source/villa-maxim.haml
+++ b/source/villa-maxim.haml
@@ -36,41 +36,98 @@ layout: default
         %p The top floor of the villa is dedicated to the lounge, kitchen/diner, powder room & large terrace.
         %p The sun filled lounge has a large picture window, double patio doors leading on to the large, partially covered terrace and a sliding window, making the most of the wonderful scenery. 
         %p.last The lounge has been decorated with comfortable sofas, Mexican furniture, all complemented by Moroccan vases & accessories.
-      .gallery
-        .gallery__collection.gallery__collection--three-up
-          .gallery__image
-            %img(src="{{ 'lagomar.jpg' | asset_path }}")
-          .gallery__image
-            %img(src="{{ 'lagomar.jpg' | asset_path }}")
-          .gallery__image
-            %img(src="{{ 'lagomar.jpg' | asset_path }}")
-          .gallery__image
-            %img(src="{{ 'lagomar.jpg' | asset_path }}")
-
-    %article.split-2
-      .summary
-        %h3.t-subhead Essentials
-        %h2.main-title Kitchen &amp; Lounge
-        %p The top floor of the villa is dedicated to the lounge, kitchen/diner, powder room & large terrace.
-        %p The sun filled lounge has a large picture window, double patio doors leading on to the large, partially covered terrace and a sliding window, making the most of the wonderful scenery. 
-        %p.last The lounge has been decorated with comfortable sofas, Mexican furniture, all complemented by Moroccan vases & accessories.
-      .gallery
-        .gallery__collection.gallery__collection--three-up
-          .gallery__image
-            %img(src="{{ 'lagomar.jpg' | asset_path }}")
 
     %article.split-2.split-2--reverse
       .summary
-        %h3.t-subhead Essentials
-        %h2.main-title Kitchen &amp; Lounge
-        %p The top floor of the villa is dedicated to the lounge, kitchen/diner, powder room & large terrace.
-        %p The sun filled lounge has a large picture window, double patio doors leading on to the large, partially covered terrace and a sliding window, making the most of the wonderful scenery. 
-        %p.last The lounge has been decorated with comfortable sofas, Mexican furniture, all complemented by Moroccan vases & accessories.
+        %h3.t-subhead Essential Information
+        %ul
+          %li
+            King size bed made up with beautiful&#160;soft linens, mattress topper &amp; protector
+          %li
+            Double patio doors leading onto "Romeo &amp; Juliet" covered balcony overlooking
+            %br>/
+            the pool with a seating area
+          %li
+            Flat screen TV with DVD &amp; USB Port; watch your favourite films or listen to some
+            %br>/
+            soothing music.
+          %li
+            Black-out curtains so you can get a well deserved, &#160;uninterrupted, lay in, in the
+            = succeed "morning." do
+              %br/
+          %li
+            Staircase leading down to your en suite bathroom with circular bath, twin sinks,
+            = succeed "walk-in" do
+              %br/
+
       .gallery
         .gallery__collection.gallery__collection--three-up
-          .gallery__image
-            %img(src="{{ 'lagomar.jpg' | asset_path }}")
+          %figure.gallery__image
+            %img(src="http://www.lanzahomes.com/wp-content/uploads/2015/04/bedroom1-cu-1010x800.jpg")
 
+    %article.split-2
+      .summary
+        %h2.main-title Master Bedroom & Ensuite Bathroom
+        %ul
+          %li
+            King size bed made up with beautiful&#160;soft linens, mattress topper &amp; protector
+          %li
+            Double patio doors leading onto "Romeo &amp; Juliet" covered balcony overlooking
+            %br>/
+            the pool with a seating area
+          %li
+            Flat screen TV with DVD &amp; USB Port; watch your favourite films or listen to some
+            %br>/
+            soothing music.
+          %li
+            Black-out curtains so you can get a well deserved, &#160;uninterrupted, lay in, in the
+            = succeed "morning." do
+              %br/
+          %li
+            Staircase leading down to your en suite bathroom with circular bath, twin sinks,
+            = succeed "walk-in" do
+              %br/
+
+      .gallery
+        .gallery__collection.gallery__collection--three-up
+          %figure.gallery__image
+            %img(src="http://www.lanzahomes.com/wp-content/uploads/2015/04/bedroom1-cu-1010x800.jpg")
+
+    %article.split-2.split-2--reverse
+      .summary
+        %h2.main-title Second Bedroom
+        %ul
+          %li
+            King size bed made up with beautifulsoft linens, mattress topper &amp; protector
+          %li
+            Double patio doors leading onto covered balcony over looking the pool witha pool table.
+          %li
+            Radio/Alarm
+          %li
+            Black-out curtains for alazy morning snooze
+
+      .gallery
+        .gallery__collection.gallery__collection--three-up
+          %figure.gallery__image
+            %img(src="http://www.lanzahomes.com/wp-content/uploads/2015/04/bedroom-2-1010x800.jpg")
+
+    %article.split-2
+      .summary
+        %h2.main-title Third Bedroom/Kids Room
+        %ul
+          %li
+            Two single beds & decorated with the kids in mind; including toys, jigsaws, books etc etc
+          %li
+            Small TV with video player and lots and lots of Disney & other favourite videos!
+          %li
+            For those of you that wish to use this bedroom for adults, the bedroom can  be made into a 'grown-up' space and the single beds made into a comfortable super king.
+          %li
+            Bathroom: There is a shared bathroom between the second & third bedrooms. Bath with shower, sink & WC
+
+      .gallery
+        .gallery__collection.gallery__collection--three-up
+          %figure.gallery__image
+            %img(src="http://www.lanzahomes.com/wp-content/uploads/2015/04/twin-bedroom2-1200x800.jpg")
 
     %article.col-5.center
       .summary
@@ -80,11 +137,11 @@ layout: default
         %p.last The lounge has been decorated with comfortable sofas, Mexican furniture, all complemented by Moroccan vases & accessories.
     .gallery
       .gallery__collection.gallery__collection--three-up
-        .gallery__image
+        %figure.gallery__image
           %img(src="{{ 'lagomar.jpg' | asset_path }}")
-        .gallery__image
+        %figure.gallery__image
           %img(src="{{ 'lagomar.jpg' | asset_path }}")
-        .gallery__image
+        %figure.gallery__image
           %img(src="{{ 'lagomar.jpg' | asset_path }}")
-        .gallery__image
+        %figure.gallery__image
           %img(src="{{ 'lagomar.jpg' | asset_path }}")
