--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -17,6 +17,7 @@
   </head>
   <body>
     {{ content }}
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
     <script type="text/javascript" src="{% asset_path application.js %}"></script>
   </body>
 </html>
